--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,12 @@
           $.getJSON(".././build/contracts/carhistory.json", function(CarHistory_json) {
             var CarHistoryContract = TruffleContract( CarHistory_json );
             CarHistoryContract.setProvider(new Web3.providers.HttpProvider("http://localhost:9545"));
+            console.log(window.web3.currentProvider);
+            web3.version.getNetwork(
+              function(err,res)
+              {
+                console.log(res)
+              });
 
             //@TODO watch event need some work
                 // Start watching the events
@@ -75,7 +81,7 @@
                   CarHistoryContract.deployed().then(function(instance) {
                       return instance.setCarHistoryLog($("#carRegNoI").val(),
                                       $("#mileage").val(),$("#record1").val(),$("#record2").val(),
-                                      $("#record3").val(), {from: '0x627306090abab3a6e1400e9345bc60c78a8bef57', gas:3000000});
+                                      $("#record3").val(), {from: '0x627306090abab3a6e1400e9345bc60c78a8bef57', gas:300000});
                   }).then(function(result) {
                       console.log('Service log created ' + result.toString());
                   }, function(error) {
